Fix for welcome page button mobile web
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@81515 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/accessibility/assistive_color_overrides.css
+++ b/projects/Media/docroot/assets/css/accessibility/assistive_color_overrides.css
@@ -731,3 +731,6 @@
 .assistive-mode #tsContainer .tsHeaderE a:focus,.assistive-mode #tsContainer .tsHeaderE a:hover{
 	background-color: #098A1E !important;
 }
+.assistive-mode #sulCont .social-login-green-button{
+	background-color: #096D19 !important;
+}
